--- a/demo/index.html
+++ b/demo/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Liquor Tree</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
+
   <body>
-    <div class="hello">
-      Hi, This Is Vue Tree Component. Try out the demos:
-    </div>
+    <div class="hello">Hi, This Is Vue Tree Component. Try out the demos:</div>
 
     <div class="demo">
       <li class="demo-item"><a href="pages/basic-usage.html">Basic Usage</a></li>
