--- a/demo/pages/custom.html
+++ b/demo/pages/custom.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Liquor Tree: Custom template</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css" />
     <script src="../assets/menu.js"></script>
 
     <!-- first import Vue -->
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
+    <script src="../assets/vue.js"></script>
     <script src="/liquor-tree.umd.js"></script>
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="all" rel="stylesheet" type="text/css" />
 
@@ -38,17 +39,14 @@
       }
     </style>
   </head>
+
   <body>
-    <div class="hello">
-      Custom Node/Icons.
-    </div>
+    <div class="hello">Custom Node/Icons.</div>
 
     <div id="app">
       <div class="examples">
         <div class="example">
-          <div class="example-description">
-            Font ionicons. (http://ionicons.com). Implementing Filesystem.
-          </div>
+          <div class="example-description">Font ionicons. (http://ionicons.com). Implementing Filesystem.</div>
           <div class="example-tree">
             <tree :data="treeData0" ref="tree" @tree:mounted="treeMounted">
               <span class="tree-text" slot-scope="{ node }">
@@ -67,23 +65,19 @@
         </div>
 
         <div class="example">
-            <div class="example-description">
-              Custom icons. Using `data` property for Nodes.
-            </div>
-            <div class="example-tree">
-              <tree :data="treeData1">
-                <span class="tree-text" slot-scope="{ node }">
-                  <span class="tree-text__text">
-                    {{ node.text }}
-                  </span>
+          <div class="example-description">Custom icons. Using `data` property for Nodes.</div>
+          <div class="example-tree">
+            <tree :data="treeData1">
+              <span class="tree-text" slot-scope="{ node }">
+                <span class="tree-text__text"> {{ node.text }} </span>
 
-                  <div class="tree-text__controls">
-                    <span @mouseup="addChild($event, node)">Add child</span>
-                  </div>
-                </span>
-              </tree>
-            </div>
+                <div class="tree-text__controls">
+                  <span @mouseup="addChild($event, node)">Add child</span>
+                </div>
+              </span>
+            </tree>
           </div>
+        </div>
       </div>
     </div>
 
@@ -102,53 +96,58 @@
             node.expand()
           },
           treeMounted() {
-            console.log(this.$refs.tree.find({ data: { text: 'User 1' }}))
+            console.log(this.$refs.tree.find({ data: { text: 'User 1' } }))
           }
         },
 
-        mounted() {
-        }
+        mounted() {}
       })
 
       function getTreeData0() {
         return [
-          { text: 'Disc C:', state: { expanded: true }, children: [
-            { text: 'PerfLogs' },
-            { text: 'Users', children: [
-              { text: 'User 1' },
-              { text: 'User 2' },
-              { text: 'User 3' }
-            ]},
-            { text: 'tomcat' },
-            { text: 'sysCache' },
-            { text: 'Program Files', children: [
-              { text: 'Intel' },
-              { text: 'Internet Explorer' },
-              { text: 'Opera' },
-              { text: 'Oracle' }
-            ]}
-          ]}
+          {
+            text: 'Disc C:',
+            state: { expanded: true },
+            children: [
+              { text: 'PerfLogs' },
+              {
+                text: 'Users',
+                children: [{ text: 'User 1' }, { text: 'User 2' }, { text: 'User 3' }]
+              },
+              { text: 'tomcat' },
+              { text: 'sysCache' },
+              {
+                text: 'Program Files',
+                children: [{ text: 'Intel' }, { text: 'Internet Explorer' }, { text: 'Opera' }, { text: 'Oracle' }]
+              }
+            ]
+          }
         ]
       }
 
       function getTreeData1() {
         return [
-          { text: 'Social', state: { expanded: true }, children: [
-            { text: 'Twitter', data: { icon: 'ion-social-twitter' }},
-            { text: 'Facebook', data: { icon: 'ion-social-facebook' }},
-            { text: 'Google+', data: { icon: 'ion-social-googleplus' }}
-          ]},
+          {
+            text: 'Social',
+            state: { expanded: true },
+            children: [
+              { text: 'Twitter', data: { icon: 'ion-social-twitter' } },
+              { text: 'Facebook', data: { icon: 'ion-social-facebook' } },
+              { text: 'Google+', data: { icon: 'ion-social-googleplus' } }
+            ]
+          },
 
-          { text: 'Currencies', children: [
-            { text: 'Dollar', data: { icon: 'ion-social-usd' } },
-            { text: 'Bitcoin', data: { icon: 'ion-social-bitcoin' } },
-            { text: 'Yen', data: { icon: 'ion-social-yen' } },
-            { text: 'Euro', data: { icon: 'ion-social-euro' } }
-          ]}
+          {
+            text: 'Currencies',
+            children: [
+              { text: 'Dollar', data: { icon: 'ion-social-usd' } },
+              { text: 'Bitcoin', data: { icon: 'ion-social-bitcoin' } },
+              { text: 'Yen', data: { icon: 'ion-social-yen' } },
+              { text: 'Euro', data: { icon: 'ion-social-euro' } }
+            ]
+          }
         ]
       }
-
     </script>
-
   </body>
 </html>
