--- a/demo/pages/dnd.html
+++ b/demo/pages/dnd.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Liquor Tree: Drag & Drop</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css" />
     <script src="../assets/menu.js"></script>
 
     <!-- first import Vue -->
-    <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
+    <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
     <script src="../assets/vue.js"></script>
     <script src="/liquor-tree.umd.js"></script>
-
 
     <style>
       .demo-tree {
@@ -25,10 +24,9 @@
       }
     </style>
   </head>
+
   <body>
-    <div class="hello">
-        Drag & Drop.
-    </div>
+    <div class="hello">Drag & Drop.</div>
 
     <div id="app">
       <div class="examples">
@@ -38,13 +36,8 @@
           </div>
 
           <div class="example-tree">
-            <tree
-              :data="treeData3"
-              :options="treeOptions3"
-            >
-              <div class="tree-scope" slot-scope="{ node }">
-                - {{ node.text }} -
-              </div>
+            <tree :data="treeData3" :options="treeOptions3">
+              <div class="tree-scope" slot-scope="{ node }">- {{ node.text }} -</div>
             </tree>
           </div>
         </div>
@@ -55,13 +48,8 @@
           </div>
 
           <div class="example-tree">
-            <tree
-              :data="treeData3"
-              :options="treeOptions3"
-            >
-              <div class="tree-scope" slot-scope="{ node }">
-                - {{ node.text }} -
-              </div>
+            <tree :data="treeData3" :options="treeOptions3">
+              <div class="tree-scope" slot-scope="{ node }">- {{ node.text }} -</div>
             </tree>
           </div>
         </div>
@@ -119,43 +107,53 @@
             KIDS: [
               { MY_TEXT: 'Getting Started (NOT DRAGGABLE)', OPTIONS: { checked: true, draggable: false } },
               { MY_TEXT: 'JavaScript Code Style', OPTIONS: { selected: true } },
-              { MY_TEXT: 'MVC Pattern (NOT DROPABLE)', OPTIONS: {dropable: false} },
-              { MY_TEXT: 'MVP Pattern (NOT DROPABLE)', OPTIONS: {dropable: false} },
+              { MY_TEXT: 'MVC Pattern (NOT DROPABLE)', OPTIONS: { dropable: false } },
+              { MY_TEXT: 'MVP Pattern (NOT DROPABLE)', OPTIONS: { dropable: false } },
               { MY_TEXT: 'MVVM Pattern' },
-              { MY_TEXT: 'The Good Parts', KIDS: [
-                { MY_TEXT: 'OBJECT ORIENTED', OPTIONS: { checked: true }  },
-                { MY_TEXT: 'ANONYMOUS FUNCTIONS', OPTIONS: { checked: true }  },
-                { MY_TEXT: 'FUNCTIONS AS FIRST-CLASS OBJECTS', OPTIONS: { checked: true }  },
-                { MY_TEXT: 'LOOSE TYPING', OPTIONS: { checked: true }  }
-              ]},
-              { MY_TEXT: 'Patterns', KIDS: [
-                { MY_TEXT: 'DESIGN PATTERNS', OPTIONS: { expanded: true }, KIDS: [
-                  { MY_TEXT: 'Creational Design Patterns', KIDS: [
-                    { MY_TEXT: 'Factory' },
-                    { MY_TEXT: 'Prototype' },
-                    { MY_TEXT: 'Mixin' },
-                    { MY_TEXT: 'Singleton' }
-                  ]},
-                  { MY_TEXT: 'Structural Design Patterns'}
-                ]},
-                { MY_TEXT: 'MV* PATTERNS', KIDS: [
-                  { MY_TEXT: 'MVC Pattern' },
-                  { MY_TEXT: 'MVP Pattern' },
-                  { MY_TEXT: 'MVVM Pattern' }
-                ]}
-              ]},
+              {
+                MY_TEXT: 'The Good Parts',
+                KIDS: [
+                  { MY_TEXT: 'OBJECT ORIENTED', OPTIONS: { checked: true } },
+                  { MY_TEXT: 'ANONYMOUS FUNCTIONS', OPTIONS: { checked: true } },
+                  { MY_TEXT: 'FUNCTIONS AS FIRST-CLASS OBJECTS', OPTIONS: { checked: true } },
+                  { MY_TEXT: 'LOOSE TYPING', OPTIONS: { checked: true } }
+                ]
+              },
+              {
+                MY_TEXT: 'Patterns',
+                KIDS: [
+                  {
+                    MY_TEXT: 'DESIGN PATTERNS',
+                    OPTIONS: { expanded: true },
+                    KIDS: [
+                      {
+                        MY_TEXT: 'Creational Design Patterns',
+                        KIDS: [{ MY_TEXT: 'Factory' }, { MY_TEXT: 'Prototype' }, { MY_TEXT: 'Mixin' }, { MY_TEXT: 'Singleton' }]
+                      },
+                      { MY_TEXT: 'Structural Design Patterns' }
+                    ]
+                  },
+                  {
+                    MY_TEXT: 'MV* PATTERNS',
+                    KIDS: [{ MY_TEXT: 'MVC Pattern' }, { MY_TEXT: 'MVP Pattern' }, { MY_TEXT: 'MVVM Pattern' }]
+                  }
+                ]
+              },
               { MY_TEXT: 'NOT Draggable VIA function', data: { isNotDraggable: true } }
             ]
           },
-          { MY_TEXT: 'Game Engines', OPTIONS: { expanded: true }, KIDS: [
-            { MY_TEXT: 'MelonJS' },
-            { MY_TEXT: 'ImpactJS' },
-            { MY_TEXT: 'LimeJS' },
-            { MY_TEXT: 'NOT DROPPADBLE VIA function', data: { isNotDroppable: true } },
-          ]}
+          {
+            MY_TEXT: 'Game Engines',
+            OPTIONS: { expanded: true },
+            KIDS: [
+              { MY_TEXT: 'MelonJS' },
+              { MY_TEXT: 'ImpactJS' },
+              { MY_TEXT: 'LimeJS' },
+              { MY_TEXT: 'NOT DROPPADBLE VIA function', data: { isNotDroppable: true } }
+            ]
+          }
         ]
       }
     </script>
-
   </body>
 </html>
