--- a/demo/pages/vuex.html
+++ b/demo/pages/vuex.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Liquor Tree: Vuex Intergation</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css" />
     <script src="../assets/menu.js"></script>
 
     <!-- first import Vue -->
-    <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
+    <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
     <script src="../assets/vue.js"></script>
-    <script src="https://unpkg.com/vuex@3.0.1/dist/vuex.js"></script>
+    <script src="https://unpkg.com/vuex@3.6.2/dist/vuex.js"></script>
     <script src="/liquor-tree.umd.js"></script>
 
     <style>
@@ -21,40 +21,26 @@
       }
     </style>
   </head>
+
   <body>
-    <div class="hello">
-      Vuex Intergation.
-    </div>
+    <div class="hello">Vuex Intergation.</div>
 
     <div id="app">
       <div class="examples">
         <div class="example">
-          <div class="example-description">
-            Tree Module "A". Synchronizes with the neighbor (-------->)
-          </div>
+          <div class="example-description">Tree Module "A". Synchronizes with the neighbor (-------->)</div>
           <div class="example-tree">
-            <tree
-              v-if="!loading"
-              :options="treeOptions1"
-              ref="tree"
-            >
-            </tree>
-            <div v-else style="padding: 20px;">Loading...</div>
+            <tree v-if="!loading" :options="treeOptions1" ref="tree"> </tree>
+            <div v-else style="padding: 20px">Loading...</div>
           </div>
         </div>
 
         <div class="example">
-            <div class="example-description">
-              Tree Module "B". Does not synchronize with the neighbor (<-------)
-            </div>
-            <div class="example-tree">
-              <tree
-                :options="treeOptions2"
-                ref="tree"
-              >
-              </tree>
-            </div>
+          <div class="example-description">Tree Module "B". Does not synchronize with the neighbor (<-------)</div>
+          <div class="example-tree">
+            <tree :options="treeOptions2" ref="tree"> </tree>
           </div>
+        </div>
       </div>
     </div>
 
@@ -85,13 +71,13 @@
 
       const moduleB = {
         state: {
-          treeModuleB: [{text: 123}]
+          treeModuleB: [{ text: 123 }]
         },
         mutations: {
           updateTreeModuleB(state, newTree) {
             state.treeModuleB = newTree
           }
-        },  
+        },
         actions: {
           updateAllTrees(context, newTree) {
             context.commit('updateTreeModuleB', newTree)
@@ -109,7 +95,8 @@
 
       const Store = new Vuex.Store({
         modules: {
-          moduleA, moduleB
+          moduleA,
+          moduleB
         }
       })
 
@@ -142,23 +129,22 @@
                 Store.dispatch('updateAllTrees', tree)
               },
               // (!!!!) to increase productivity
-              mutations: [
-                'updateTreeModuleA'
-              ]
+              mutations: ['updateTreeModuleA']
             }
           }
         }),
 
         mounted() {
           setTimeout(_ => {
-            fetch('/assets/data/filtering.json').then(r => r.json()).then(data => {
-              Store.dispatch('updateModuleA', data)
-              this.loading = false
-            })
+            fetch('/assets/data/filtering.json')
+              .then(r => r.json())
+              .then(data => {
+                Store.dispatch('updateModuleA', data)
+                this.loading = false
+              })
           }, 1000)
         }
       })
     </script>
-
   </body>
 </html>
