--- a/demo/pages/async.html
+++ b/demo/pages/async.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Liquor Tree: Basic Usage</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css" />
     <script src="../assets/menu.js"></script>
 
     <!-- first import Vue -->
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
+    <script src="../assets/vue.js"></script>
     <script src="/liquor-tree.umd.js"></script>
 
     <style>
@@ -23,10 +24,9 @@
       }
     </style>
   </head>
+
   <body>
-    <div class="hello">
-      Async Loading.
-    </div>
+    <div class="hello">Async Loading.</div>
 
     <div id="app">
       <div class="examples">
@@ -45,27 +45,23 @@
             Here we don't have an initial data. The tree will try to fetch init data with ID == 'root' (node's name is 'root' as well)
           </div>
           <div class="example-tree">
-              <tree :options="fetchExample0" />
+            <tree :options="fetchExample0" />
           </div>
         </div>
 
         <div class="example">
-          <div class="example-description">
-            Loading indicator and delay (5000ms)
-          </div>
+          <div class="example-description">Loading indicator and delay (5000ms)</div>
           <div class="example-tree">
-              <tree :options="fetchExample1" :data="treeData1" />
+            <tree :options="fetchExample1" :data="treeData1" />
           </div>
         </div>
 
         <div class="example">
-            <div class="example-description">
-              Prop names
-            </div>
-            <div class="example-tree">
-                <tree :options="fetchExample2" />
-            </div>
+          <div class="example-description">Prop names</div>
+          <div class="example-tree">
+            <tree :options="fetchExample2" />
           </div>
+        </div>
       </div>
     </div>
 
@@ -73,8 +69,9 @@
       // Some Vuex emulation :)
       const $store = {
         dispatch(t) {
-          switch(t) {
-            case 'FETCH-TREE': return fetch('/assets/data/fetch-example.json').then(r => r.json())
+          switch (t) {
+            case 'FETCH-TREE':
+              return fetch('/assets/data/fetch-example.json').then(r => r.json())
           }
         }
       }
@@ -83,27 +80,31 @@
         el: '#app',
         data: () => ({
           treeData: $store.dispatch('FETCH-TREE'),
-          treeData1: [{
-            text: 'Root node',
-            id: 'root',
-            isBatch: true
-          }],
+          treeData1: [
+            {
+              text: 'Root node',
+              id: 'root',
+              isBatch: true
+            }
+          ],
 
           fetchExample0: {
             /*
-              - fetchData: `/assets/data/fetch0/data-{id}.json`
-              - fetchData(node) {
-                return `/assets/data/fetch0/data-${node.id}.json`
-              }
-              - fetchData(node) {
-                // return Promise object
-                return fetch(`/assets/data/fetch0/data-${node.id}.json`).then(r => r.json()).catch(e => console.log(e))
-              }
-            */
+            - fetchData: `/assets/data/fetch0/data-{id}.json`
+            - fetchData(node) {
+              return `/assets/data/fetch0/data-${node.id}.json`
+            }
+            - fetchData(node) {
+              // return Promise object
+              return fetch(`/assets/data/fetch0/data-${node.id}.json`).then(r => r.json()).catch(e => console.log(e))
+            }
+          */
 
             fetchData(node) {
               // return Promise object
-              return fetch(`/assets/data/fetch0/data-${node.id}.json`).then(r => r.json()).catch(e => console.log(e))
+              return fetch(`/assets/data/fetch0/data-${node.id}.json`)
+                .then(r => r.json())
+                .catch(e => console.log(e))
             }
           },
 
@@ -112,12 +113,15 @@
             minFetchDelay: 600,
             fetchData(node) {
               // return Promise object
-              return fetch(`/assets/data/fetch0/data-${node.id}.json`).then(r => r.json()).then(data => {
-                data[0].state = {
-                  checked: true
-                }
-                return data
-              }).catch(e => console.log(e))
+              return fetch(`/assets/data/fetch0/data-${node.id}.json`)
+                .then(r => r.json())
+                .then(data => {
+                  data[0].state = {
+                    checked: true
+                  }
+                  return data
+                })
+                .catch(e => console.log(e))
             },
             onFetchError(error) {
               console.error(error)
@@ -126,21 +130,20 @@
 
           fetchExample2: {
             propertyNames: {
-              text: 'name',
+              text: 'name'
             },
             fetchData: node => {
               return new Promise((resolve, reject) => {
                 resolve({
                   id: 1,
                   name: 'test',
-                  isBatch: true,
-                });
+                  isBatch: true
+                })
               })
             }
           }
         })
       })
     </script>
-
   </body>
 </html>
