--- a/demo/pages/basic-usage.html
+++ b/demo/pages/basic-usage.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Liquor Tree: Basic Usage</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css" />
     <script src="../assets/menu.js"></script>
 
     <!-- first import Vue -->
-    <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
+    <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
     <script src="../assets/vue.js"></script>
     <script src="/liquor-tree.umd.js"></script>
-
 
     <style>
       .demo-tree {
@@ -25,10 +24,9 @@
       }
     </style>
   </head>
+
   <body>
-    <div class="hello">
-      Basic Usage.
-    </div>
+    <div class="hello">Basic Usage.</div>
 
     <div id="app">
       <div class="examples">
@@ -45,11 +43,14 @@
 
         <div class="example">
           <div class="example-description">
-            <p>Here we defined some states for Nodes. You can check the whole <a href="https://amsik.github.io/liquor-tree/#Structure" target="_blank">structure</a>.</p>
+            <p>
+              Here we defined some states for Nodes. You can check the whole
+              <a href="https://amsik.github.io/liquor-tree/#Structure" target="_blank">structure</a>.
+            </p>
             <p>Also we added some tree options. <a href="https://amsik.github.io/liquor-tree/#Component-Options">Full list.</a></p>
           </div>
           <div class="example-tree">
-            <tree :data="treeData1" :options="treeOptions1"/>
+            <tree :data="treeData1" :options="treeOptions1" />
           </div>
         </div>
 
@@ -60,10 +61,7 @@
 
           <div class="example-tree">
             <button @click="initTree2" v-if="!treeData2">Build Tree</button>
-            <tree
-              v-if="treeData2"
-              :data="treeData2"
-            />
+            <tree v-if="treeData2" :data="treeData2" />
           </div>
         </div>
 
@@ -73,10 +71,7 @@
           </div>
 
           <div class="example-tree">
-            <tree
-              :data="treeData3"
-              :options="treeOptions3"
-            />
+            <tree :data="treeData3" :options="treeOptions3" />
           </div>
         </div>
       </div>
@@ -129,31 +124,31 @@
       function getTreeData0() {
         return [
           { text: 'Item 1' },
-          { text: 'Item 2', children: [
-            { text: 'Item 2.1' },
-            { text: 'Item 2.2' },
-            { text: 'Item 2.3' }
-          ]},
+          {
+            text: 'Item 2',
+            children: [{ text: 'Item 2.1' }, { text: 'Item 2.2' }, { text: 'Item 2.3' }]
+          },
           { text: 'Item 3' },
           { text: 'Item 4' },
-          { text: 'Item 5' },
+          { text: 'Item 5' }
         ]
       }
 
       function getTreeData1() {
-        return [{
+        return [
+          {
             text: 'Item 1',
             state: {
               selected: true
             }
           },
-
           {
             text: 'Item 2',
             state: {
               expanded: true
             },
-            children: [{
+            children: [
+              {
                 text: '<b>Item 2.1</b>',
                 state: {
                   checked: true
@@ -164,7 +159,8 @@
               },
               {
                 text: 'Item 2.3',
-                children: [{
+                children: [
+                  {
                     text: 'Item 2.2.3.1'
                   },
                   {
@@ -175,7 +171,8 @@
                   },
                   {
                     text: 'Item 2.2.3.4',
-                    children: [{
+                    children: [
+                      {
                         text: 'Item 2.2.3.4.1'
                       },
                       {
@@ -190,25 +187,23 @@
               }
             ]
           },
-
           {
             text: 'Item 3',
             state: {
               selected: true
             }
           },
-
           {
             text: 'Item 4'
           },
-
           {
             text: 'Item 5',
             state: {
               expanded: true,
               disabled: true
             },
-            children: [{
+            children: [
+              {
                 text: 'Item 5.1'
               },
               {
@@ -230,33 +225,39 @@
             KIDS: [
               { MY_TEXT: 'Getting Started', OPTIONS: { checked: true } },
               { MY_TEXT: 'JavaScript Code Style', OPTIONS: { selected: true } },
-              { MY_TEXT: 'The Good Parts', KIDS: [
-                { MY_TEXT: 'OBJECT ORIENTED', OPTIONS: { checked: true }  },
-                { MY_TEXT: 'ANONYMOUS FUNCTIONS', OPTIONS: { checked: true }  },
-                { MY_TEXT: 'FUNCTIONS AS FIRST-CLASS OBJECTS', OPTIONS: { checked: true }  },
-                { MY_TEXT: 'LOOSE TYPING', OPTIONS: { checked: true }  }
-              ]},
-              { MY_TEXT: 'Patterns', KIDS: [
-                { MY_TEXT: 'DESIGN PATTERNS', OPTIONS: { expanded: true }, KIDS: [
-                  { MY_TEXT: 'Creational Design Patterns', KIDS: [
-                    { MY_TEXT: 'Factory' },
-                    { MY_TEXT: 'Prototype' },
-                    { MY_TEXT: 'Mixin' },
-                    { MY_TEXT: 'Singleton' }
-                  ]},
-                  { MY_TEXT: 'Structural Design Patterns'}
-                ]},
-                { MY_TEXT: 'MV* PATTERNS', cildren: [
-                  { MY_TEXT: 'MVC Pattern' },
-                  { MY_TEXT: 'MVP Pattern' },
-                  { MY_TEXT: 'MVVM Pattern' }
-                ]}
-              ]}
+              {
+                MY_TEXT: 'The Good Parts',
+                KIDS: [
+                  { MY_TEXT: 'OBJECT ORIENTED', OPTIONS: { checked: true } },
+                  { MY_TEXT: 'ANONYMOUS FUNCTIONS', OPTIONS: { checked: true } },
+                  { MY_TEXT: 'FUNCTIONS AS FIRST-CLASS OBJECTS', OPTIONS: { checked: true } },
+                  { MY_TEXT: 'LOOSE TYPING', OPTIONS: { checked: true } }
+                ]
+              },
+              {
+                MY_TEXT: 'Patterns',
+                KIDS: [
+                  {
+                    MY_TEXT: 'DESIGN PATTERNS',
+                    OPTIONS: { expanded: true },
+                    KIDS: [
+                      {
+                        MY_TEXT: 'Creational Design Patterns',
+                        KIDS: [{ MY_TEXT: 'Factory' }, { MY_TEXT: 'Prototype' }, { MY_TEXT: 'Mixin' }, { MY_TEXT: 'Singleton' }]
+                      },
+                      { MY_TEXT: 'Structural Design Patterns' }
+                    ]
+                  },
+                  {
+                    MY_TEXT: 'MV* PATTERNS',
+                    cildren: [{ MY_TEXT: 'MVC Pattern' }, { MY_TEXT: 'MVP Pattern' }, { MY_TEXT: 'MVVM Pattern' }]
+                  }
+                ]
+              }
             ]
           }
         ]
       }
     </script>
-
   </body>
 </html>
