--- a/demo/pages/big-data.html
+++ b/demo/pages/big-data.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Liquor Tree: Basic Usage</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css" />
     <script src="../assets/menu.js"></script>
 
     <!-- first import Vue -->
-    <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
+    <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
     <script src="../assets/vue.js"></script>
     <script src="/liquor-tree.umd.js"></script>
-
 
     <style>
       .demo-tree {
@@ -25,10 +24,9 @@
       }
     </style>
   </head>
+
   <body>
-    <div class="hello">
-      Basic Usage.
-    </div>
+    <div class="hello">Basic Usage.</div>
 
     <div id="app">
       <div class="examples">
@@ -52,7 +50,7 @@
       new Vue({
         el: '#app',
         data: () => ({
-          timetaken: "",
+          timetaken: '',
           options: {
             checkbox: true
           }
@@ -61,31 +59,23 @@
         methods: {
           getItems(prefix, num, index, depth) {
             if (depth === 0) {
-              return [];
+              return []
             } else {
               return [...Array(num)].map((o, i) => ({
                 text: `${prefix}-${i}-${depth}`,
                 children: this.getItems(prefix, numItems, i, depth - 1)
-              }));
+              }))
             }
           },
 
           changeOptions() {
-            const items = this.getItems(
-              Math.random()
-                .toString(36)
-                .substring(3, 6),
-              numItems,
-              0,
-              3
-            );
-            const s = new Date().valueOf();
-            this.$refs.tree.setModel(items);
-            this.timetaken = `Time taken by setModel: ${new Date().valueOf() - s} ms`;
+            const items = this.getItems(Math.random().toString(36).substring(3, 6), numItems, 0, 3)
+            const s = new Date().valueOf()
+            this.$refs.tree.setModel(items)
+            this.timetaken = `Time taken by setModel: ${new Date().valueOf() - s} ms`
           }
         }
       })
     </script>
-
   </body>
 </html>
