--- a/demo/pages/custom-theme.html
+++ b/demo/pages/custom-theme.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Liquor Tree: Custom theme</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css" />
     <script src="../assets/menu.js"></script>
 
     <!-- first import Vue -->
-    <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
+    <!-- <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script> -->
     <script src="../assets/vue.js"></script>
     <script src="/liquor-tree.umd.js"></script>
     <!-- <script src="../assets/data/devdocs-menu.js"></script> -->
-
 
     <style>
       body {
@@ -58,7 +57,7 @@
         display: block;
         width: 100%;
         height: 100%;
-        font-size: .875rem;
+        font-size: 0.875rem;
         background: #fff;
         border: 1px solid;
         border-color: #d2d2d2;
@@ -115,15 +114,17 @@
       }
     </style>
   </head>
+
   <body>
     <div class="hello">
-      Custom theme. This example shows how to use tree in real life. It is a clone (a lot of functionallity are missed) of super amazing site (https://devdocs.io)
+      Custom theme. This example shows how to use tree in real life. It is a clone (a lot of functionallity are missed) of super amazing
+      site (https://devdocs.io)
     </div>
 
     <div id="app">
       <div class="navigation">
         <div class="navigation-filter">
-          <input type="text" v-model="treeFilter" placeholder="Type to filter...">
+          <input type="text" v-model="treeFilter" placeholder="Type to filter..." />
         </div>
         <div class="navigation-tree">
           <tree :data="treeData" :options="treeOptions" :filter="treeFilter" v-model="selectedNode">
@@ -131,25 +132,16 @@
               <template v-if="node.data.isRoot">
                 <!-- you can add an icon here, but it is too long for the demo... sorry  -->
 
-                <span class="text">
-                  {{ node.text }}
-                </span>
+                <span class="text"> {{ node.text }} </span>
 
-                <span class="release" v-if="!node.hasChildren()">
-                  {{ node.data.release }}
-                </span>
+                <span class="release" v-if="!node.hasChildren()"> {{ node.data.release }} </span>
               </template>
               <template v-else>
-
                 <!-- here we can leave a vue-router for example... -->
 
-                <span class="text">
-                    {{ node.text }}
-                  </span>
+                <span class="text"> {{ node.text }} </span>
 
-                  <span class="release">
-                    {{ node.data.release }}
-                  </span>
+                <span class="release"> {{ node.data.release }} </span>
               </template>
             </div>
           </tree>
@@ -181,63 +173,62 @@
             },
 
             // do not judge me :)
-            treeData: fetch('../assets/data/devdocs-menu.json').then(r => r.json()).then(r => {
-              const items = {}
+            treeData: fetch('../assets/data/devdocs-menu.json')
+              .then(r => r.json())
+              .then(r => {
+                const items = {}
 
-              r.forEach(item => {
-                const { name } = item;
+                r.forEach(item => {
+                  const { name } = item
 
-                if (false === (name in items)) {
-                  items[name] = []
-                }
+                  if (false === name in items) {
+                    items[name] = []
+                  }
 
-                let treeItem = {
-                  text: item.version ? `${item.name} ${item.version}` : item.name,
-                  data: item
-                }
+                  let treeItem = {
+                    text: item.version ? `${item.name} ${item.version}` : item.name,
+                    data: item
+                  }
 
-                items[name].push(treeItem)
+                  items[name].push(treeItem)
+                })
+
+                let o = Object.keys(items).reduce((a, b) => {
+                  let children = items[b]
+                  let item
+
+                  if (children.length > 1) {
+                    item = {
+                      text: children[0].data.name,
+                      data: Object.assign({}, children[0].data),
+                      children
+                    }
+                  } else {
+                    item = children[0]
+                    item.data
+                  }
+
+                  if (!item.data) {
+                    item.data = {
+                      type: children[0].data.type,
+                      isRoot: true
+                    }
+                  } else {
+                    item.data.isRoot = true
+                  }
+
+                  a.push(item)
+
+                  return a
+                }, [])
+
+                return o
               })
-
-              let o = Object.keys(items).reduce((a, b) => {
-                let children = items[b]
-                let item
-
-                if (children.length > 1) {
-                  item = {
-                    text: children[0].data.name,
-                    data: Object.assign({}, children[0].data),
-                    children
-                  }
-                } else {
-                  item = children[0]
-                  item.data
-                }
-
-                if (!item.data) {
-                  item.data = {
-                    type: children[0].data.type,
-                    isRoot: true
-                  }
-                } else {
-                  item.data.isRoot = true
-                }
-
-                a.push(item)
-
-                return a
-              }, [])
-
-              return o
-            })
           }
         },
 
-        methods: {
-        }
+        methods: {}
       })
-
     </script>
-
   </body>
 </html>
